overflow fix

--- a/src/components/backgroundImage/BackgroundImage.module.scss
+++ b/src/components/backgroundImage/BackgroundImage.module.scss
@@ -4,6 +4,7 @@
   z-index: -1;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 
   .backgroundImage {
     width: 132vw;
